<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">NFC Tag maker</string>
    <string name="Success">Tag written successfully!</string>
	<string name="Failed">Couldn\'t write tag :(</string>
	<string name="PlaceTag">Place a tag against your device.</string>
	<string name="PlaceSourceTag">Place a SOURCE tag against your device to read from it.</string>
	<string name="PlaceCloneTag">Place a NEW tag against your device to clone to it.</string>
	<string name="Exit">Exit</string>
	<string name="About">About</string>
	<string name="CloneNFCTag">Clone NFC tag</string>
	<string name="CantFindNFCAdapter">Can\'t find any NFC adapter. Probably your device doesn\'t have it at all&#8230;</string>
	<string name="EnabeNFCFirst">NFC adapter is disabled. Please enable it first</string>
	<string name="Settings">Settings</string>
	<string name="defaultUri"></string>
	<string name="defaultName"></string>
	<string name="defaultPhone"></string>
	<string name="defaultWeb"></string>
	<string name="defaultEmail"></string>
	<string name="type1uri">NFC Forum type (1) URi record</string>
	<string name="writeuri">Write URI</string>
	<string name="smartposter">Smart poster</string>
	<string name="writesmartposter">Write smart poster</string>
	<string name="writephonenumber">Write phone number</string>
	<string name="mimevcard">MIME vCard</string>
	<string name="writevcard">Write vCard</string>
	<string name="uri">URI</string>
	<string name="name">Name</string>
	<string name="phone">Phone</string>
	<string name="email">Email</string>
	<string name="web">Web</string>
	<string name="advanced">Advanced</string>
	<string name="write">Write</string>
	<string name="read">Read</string>
	<string name="emptyHEX">00000000</string>
	<string name="legal">Illicit usage strictly prohibited!</string>
	<string name="disc">Use write feature at your own risk! You have been warned!</string>
	<string name="disc00">Please read content from card before you write anything!</string>
	<string name="disc01">Press READ and place tag against your device to read HEX values</string>
	<string name="disc02">Press WRITE  and place tag against your device to write HEX values</string>
	<string name="readHEX">place tag against your device to READ HEX values</string>
	<string name="writeHEX">place tag against your device to WRITE HEX values</string>
	<string name="done">Done !</string>
	<string name="card_type">Card type:</string>
	<string name="card_not_supported">Card not supported :(</string>
	<string name="exReadingPage">Exception while reading MifareUltralight page:</string>
	<string name="exWritingPage">Exception while writing MifareUltralight page:</string>
	<string name="exClosingTag">Error while closing tag</string>
	<string name="Save">Save</string>
	<string name="Load">Load</string>
	<string name="FileNotFound">File not found!</string>
	<string name="SavingTo">Saving to:</string>
	<string name="OIFile">OI Filemanager is missing!\r\nPlease install it.</string>
	<string name="menu_item_rate">Rate app</string>
    <string name="rate_text">Would you like to rate my app?</string>
    <string name="menu_item_donate">Buy beer</string>
    <string name="donate_text">Would you like to buy me a beer?</string>
</resources>