<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:text="@string/type1uri"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            

            <Space
                android:id="@+id/Space1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="22dp"
                android:gravity="left"
                android:text="@string/mimevcard"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="23dp"
                android:text="@string/smartposter"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/Writesp"
                        android:layout_width="120dp"
                        android:layout_height="96dp"
                        android:text="@string/writesmartposter" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" >

                    <Button
                        android:id="@+id/Writephone"
                        android:layout_width="120dp"
                        android:layout_height="96dp"
                        android:text="@string/writephonenumber"
                        android:visibility="visible" />
                </FrameLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/advanced"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/advanced"
                android:textColor="#CC0000" />

            <Button
                android:id="@+id/quit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Exit" />
        </LinearLayout>

        <Button
            android:id="@+id/Writeuri"
            android:layout_width="120dp"
            android:layout_height="96dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/relativeLayout2"
            android:text="@string/writeuri" />

        <Button
            android:id="@+id/WritevCard"
            android:layout_width="120dp"
            android:layout_height="96dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout2"
            android:text="@string/writevcard" />

    </RelativeLayout>

</ScrollView>
